# lzvn

./: .gitattributes  .gitignore  Cargo.toml  README.md
.github/workflows/: quality_check.yml  release.yml
benches/: codec.rs
fuzz/: Cargo.toml  README.md
fuzz/corpus/bvxn_decode/: blacktop.bvxn  libfsapfs.bvxn
fuzz/fuzz_targets/: bvxn_decode.rs  decmpfs_decode.rs  raw_decode.rs  roundtrip.rs
src/: error.rs  lib.rs  stream.rs
src/apple/: bvxn.rs  mod.rs
src/apple/fs/: decmpfs.rs  mod.rs
src/raw/: decode.rs  encode.rs  mod.rs  opcode.rs  stream.rs
tests/: bvxn.rs  decmpfs.rs  differential.rs  e2e_real_fixtures.rs  encode.rs  proptest.rs  raw_decode.rs  stream.rs
tests/fixtures/: README.md  blacktop_lzvn_dec.hex  blacktop_lzvn_enc.hex  libfsapfs_decmpfs_lzvn_xattr.hex  libfsapfs_lzvn_compressed.hex  libfsapfs_lzvn_uncompressed_sentinel.hex
