[package]
name = "lzvn"
version = "0.1.0"
edition = "2024"
authors = ["Reverier-Xu <reverier.xu@woooo.tech>"]
license = "Apache-2.0"
description = "Safe, clean-room LZVN encode/decode support for raw streams and Apple wrappers"
readme = "README.md"
repository = "https://github.com/Reverier-Xu/lzvn"
homepage = "https://github.com/Reverier-Xu/lzvn"
documentation = "https://docs.rs/lzvn"
keywords = ["compression", "lzvn", "apple"]
categories = ["compression"]
exclude = ["/fuzz"]

[dependencies]
thiserror = "2.0.17"

[dev-dependencies]
criterion = "0.5.1"
lzfse = "0.2.0"
proptest = "1.9.0"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[[bench]]
name = "codec"
harness = false
